--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -14,11 +14,12 @@
 * Inbox
 * Next Action
 ** TODO [#A] 完成每日日报                                            :work:
-SCHEDULED: <2021-06-19 周六 19:00 ++1d> DEADLINE: <2021-06-19 周六 23:59 ++1d>
+SCHEDULED: <2021-06-20 周日 19:00 ++1d> DEADLINE: <2021-06-20 周日 23:59 ++1d>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-06-18 周五 22:58]
+:LAST_REPEAT: [2021-06-19 周六 19:51]
 :END:
+- State "DONE"       from "TODO"       [2021-06-19 周六 19:51]
 - State "DONE"       from "TODO"       [2021-06-18 周五 22:58]
 - State "DONE"       from "TODO"       [2021-06-17 周四 22:15]
 - State "DONE"       from "TODO"       [2021-06-16 周三 21:10]
@@ -138,14 +139,15 @@ SCHEDULED: <2021-06-19 周六 18:00 ++1w> DEADLINE: <2021-06-21 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-06-19 周六 19:00 ++1d>
+SCHEDULED: <2021-06-20 周日 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-06-18 周五 09:16]
+:LAST_REPEAT: [2021-06-19 周六 16:24]
 :END:
 
+- State "DONE"       from "TODO"       [2021-06-19 周六 16:24]
 - State "DONE"       from "TODO"       [2021-06-18 周五 09:16]
 - State "DONE"       from "TODO"       [2021-06-17 周四 09:35]
 - State "DONE"       from "TODO"       [2021-06-16 周三 08:43]
@@ -225,13 +227,14 @@ SCHEDULED: <2021-06-19 周六 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
 ** TODO [#A] 学习《游戏编程模式》                            :learn:ATTACH:
-SCHEDULED: <2021-06-19 周六 09:00 ++1d>
+SCHEDULED: <2021-06-20 周日 09:00 ++1d>
 :PROPERTIES:
 :STYLE:    habit
 :ATTACH:  [[attachment:游戏编程模式.org][游戏编程模式]] 
-:LAST_REPEAT: [2021-06-18 周五 11:16]
+:LAST_REPEAT: [2021-06-19 周六 19:51]
 :ID:       9f4da250-7217-4dae-b806-bb1d74142050
 :END:
+- State "DONE"       from "TODO"       [2021-06-19 周六 19:51]
 - State "DONE"       from "TODO"       [2021-06-18 周五 11:16]
 - State "DONE"       from "TODO"       [2021-06-17 周四 11:26]
 - State "DONE"       from "TODO"       [2021-06-16 周三 21:01]
