[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -168,6 +168,13 @@ DEADLINE: <2021-06-30 Wed 23:00 ++1m> SCHEDULED: <2021-06-30 Wed 09:00 ++1m>
   2. 完成了多益的入职培训
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
+** TODO [#A] 补齐缺失物品 [0/5]                                   :shopping:
+SCHEDULED: <2021-06-22 Tue 02:39>
+- [ ] 鼠标防滑贴
+- [ ] 硅脂
+- [ ] 5v-rgb分线器
+- [ ] 蓝牙耳机(未定)
+- [ ] 键帽
 * Appointment
 ** TODO 手机号码切换                                                :event:
 SCHEDULED: <2021-06-12 周六 09:00>
