[org]update note j

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -27,12 +27,29 @@ DEADLINE: <2021-07-12 周一 23:00 +1m> SCHEDULED: <2021-07-12 周一 09:00 +1m>
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2021-06-20 周日 23:00 ++1w> SCHEDULED: <2021-06-19 周六 18:00 ++1w>
+DEADLINE: <2021-06-27 周日 23:00 ++1w> SCHEDULED: <2021-06-26 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-06-11 周五 17:11]
+:LAST_REPEAT: [2021-06-20 周日 09:31]
 :END:
+- State "DONE"       from "TODO"       [2021-06-20 周日 09:31] \\
+  1. 完成了组队车轮战
+     由于在一开始设计的时候已经考虑到组队的情况, 基本的框架已经构造好了, 所以整体来
+     说还是比较容易的. 主要实现点在于:
+     - 组队英雄选框, 需要在服务器获取所有宠物的列表, 并根据玩家的序号随时同步切换选
+       框
+     - 组队车轮战和组队英雄山逻辑融合, 因为英雄山团队关卡就是组队车轮战, 所以还需要
+       将现有的英雄山关卡和组队车轮战融合成一个
+     - 效率优化, 进入战斗后不再关闭战斗布局界面而是隐藏起来, 因为大概率还会自动进入
+  2. 完成了转正报告
+  ------------------------------------------------
+  1. 618疯狂大出血, 买了一堆零件开始装机
+  2. 装机装了一天, 还是不太熟练, 毕竟是第一次, 以后就游刃有余了
+  3. 小区办理门禁卡20元
+  4. 为同事庆生, 请他吃了顿烧烤
+  ------------------------------------------------
+  1. 不小心把耳机弄丢了一个, 一定要小心呀
 - State "DONE"       from "TODO"       [2021-06-11 周五 17:11] \\
   1. 完成了多益第二季度的季度报告
   2. 完成了多益的转正自评(网页版)
@@ -168,13 +185,51 @@ DEADLINE: <2021-06-30 Wed 23:00 ++1m> SCHEDULED: <2021-06-30 Wed 09:00 ++1m>
   2. 完成了多益的入职培训
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
-** TODO [#A] 补齐缺失物品 [0/5]                                   :shopping:
-SCHEDULED: <2021-06-22 Tue 02:39>
-- [ ] 鼠标防滑贴
-- [ ] 硅脂
-- [ ] 5v-rgb分线器
-- [ ] 蓝牙耳机(未定)
-- [ ] 键帽
+** DONE [#A] 补齐缺失物品 [5/5]                                  :shopping:
+CLOSED: [2021-06-21 周一 17:33] SCHEDULED: <2021-06-21 Tue 09:39>
+- State "DONE"       from "TODO"       [2021-06-21 周一 17:33]
+- [X] 鼠标防滑贴
+- [X] 硅脂
+- [X] 5v-rgb分线器
+- [X] 键帽
+- [X] 胶带
+** Archive                                                        :ARCHIVE:
+*** DONE [#A] 装机 [100%]                                           :event:
+CLOSED: [2021-06-20 周日 09:25] SCHEDULED: <2021-06-20 周日 09:10>
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-06-20 周日 09:43
+:END:
+- State "DONE"       from "TODO"       [2021-06-20 周日 16:25]
+1. [X] 装备主板
+   - [X] 安装cpu
+   - [X] 安装内存
+   - [X] 安装m.2固态硬盘
+2. [X] 安装主板
+   - [X] 拆开机箱
+   - [X] 查看好机箱底部螺丝柱, 确保对应后, 将主板安装到机箱上
+3. [X] 装配散热
+   - [X] 将水冷风扇装到冷排上(入风)
+   - [X] 将冷排固定到机箱前侧
+   - [X] 在cpu上涂抹硅脂, 将冷头盖到cpu上并固定
+   - [X] 安装顶部风扇和背部风扇(出风)
+4. [X] 装配电源
+   - [X] 将需要好的线缆(主板供电, cpu供电, gpu供电, sata供电等)装到电源上
+   - [X] 将电源固定到机箱上
+5. [X] 安装sata硬盘
+6. [X] 接驳线缆
+   - [X] 主板供电
+   - [X] cpu供电
+   - [X] 开机跳线
+   - [X] 机箱sata供电
+   - [X] 水冷供电
+   - [X] 风扇供电
+   - [X] 机箱和风扇rgb
+   - [X] 电源rgb
+   - [X] usb3.0和usb2.0
+   - [X] sata数据线
+   - [X] 音频跳线
+7. [X] 安装显卡并接线固定
+8. [X] 将拆下的机箱部件安装回去, 完成
 * Appointment
 ** TODO 手机号码切换                                                :event:
 SCHEDULED: <2021-06-12 周六 09:00>
@@ -210,8 +265,11 @@ CLOSED: [2021-06-07 Mon 20:17] SCHEDULED: <2021-04-10 周六 13:20>
   129每月, 下行300上行，下行40
 - State "WAIT"       from "TODO"       [2021-04-10 周六 13:36] \\
   暂时没需求.
-** DONE 组装一台性价比高的台式机用于开发和娱乐                   :shopping:
+*** DONE 组装一台性价比高的台式机用于开发和娱乐                  :shopping:
 CLOSED: [2021-06-18 周五 09:29]
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-06-20 周日 09:43
+:END:
 - State "DONE"       from "TODO"       [2021-06-18 周五 09:29] \\
   1. 最终还是下定决心, 在618进行一个电脑的买, 显卡忒贵了, 只能二手先顶顶了
   2. 如果不是缺货, 一定要最后一天(618)在买, 切记, 每个都能便宜点
