--- a/src/org/ref/duoyi/liwei_engine.org
+++ b/src/org/ref/duoyi/liwei_engine.org
@@ -266,4 +266,6 @@ Wrong: m_happen, m_ID_Scroll
 1. Richtext调整大小之后SetAlignMode会失效
 2. 新建新的UI文件夹时如果导入失败, 可能是没有加__init__.py
 3. IOS如果首次登陆时没有弹出网络权限配置请求, 可以使用C_sys.IsEnableNetwork来主动触发
-4. 严格注意信号的使用, 很多信号关联着大量的页面刷新, 滥用信号很有可能导致卡顿
+4. 严格注意信号的使用, 很多信号关联着大量的页面刷新, 滥用信号很有可能导致卡顿, 信
+   号绑定的粒度尽可能大, 有效减少函数调用次数
+   
