--- a/src/org/ref/游戏编程模式.org
+++ b/src/org/ref/游戏编程模式.org
@@ -1391,6 +1391,37 @@
    通过维护一个对象池, 粒子对象的创建不需要通过内存管理, 而是一次性申请一块内存自
    己进行管理, 有效的防止了产生碎片化内存. 对象池内部通过链表来寻找下一个可用粒子
    对象, 时间效率为O(1).
+3. 使用场景
+   * 你需要频繁的创建销毁对象
+   * 对象大小一致
+   * 每个对象封装着获取代价昂贵且可重用的资源, 如数据库, 网络连接
+4. 使用代价
+   * 对象池会浪费一定内存, 未使用的对象也会占用内存
+   * 对象池的对象由自己管理, 不会被自动清理(0xdeadbeef)
+5. 如果对象池的数目恒定时, 当产生新的申请时:
+   * 阻止申请, 可以确保不会溢出
+   * 不创建对象
+   * 删除一个现有对象
+   * 增加对象池的大小
+6. 如果存在许多不同大小的对象, 建议创建多个不同大小的内存池, 这也是内存分配
+   的管理模式
+7. 对象是否被加入对象池
+   * 假如对象池和对象耦合
+     - 实现很简单
+     - 你可以保证对象只由对象池创建
+     - 可以避免存储一个代表"使用中"的标识位, 因为对象知道自己被对象池使用, 可以
+       提供一个代表自身状态的函数
+   * 如果独立于对象池
+     - 你得到了一个通用的对象池类
+     - 外部必须有办法追踪每个对象的使用状态, 最简单的方式就是使用标识位
+8. 谁来初始化对象
+   * 在对象池内部初始化
+     - 对象池可以完全封装对象的初始化
+     - 对象池可能要提供多种初始化函数, 和对象的初始化方法数量相关
+   * 在对象池外部初始化
+     - 对象池的借口会更简单
+     - 外部需要处理对象创建失败的情况
+9. [[*享元模式][享元模式]]也有对对象的重用, 他们的区别在于, 这个是时间上的重用, 而享元是空间上的
 * 空间分区
 1. 什么是空间分区
    #+BEGIN_VERSE
