[org]update note

--- a/src/org/ref/游戏编程模式.org
+++ b/src/org/ref/游戏编程模式.org
@@ -30,7 +30,7 @@
 * 命令模式
 1. 什么是命令
    #+BEGIN_VERSE
-   命令就是面向对象化的回调
+   "命令就是面向对象化的回调"
    通过命令将输入和操作解耦
    #+END_VERSE
 2. 经典场景, 撤销和重做
@@ -119,8 +119,8 @@
 * 观察者模式
 1. 什么是观察者
    #+BEGIN_VERSE
-   在对象之间定义一种一对多的关系, 以便当某个对象改变时, 与他存在依赖关系的所有对象
-   都能收到通知并自动更新
+   "在对象之间定义一种一对多的关系, 以便当某个对象改变时, 与他存在依赖关系的所有对
+   象都能收到通知并自动更新"
    #+END_VERSE
 2. 经典场景, 成就系统
    #+DESCRIPTION: 实现一个物理和成就系统解耦的系统
@@ -189,7 +189,7 @@
 * 原型模式
 1. 什么是原型
    #+BEGIN_VERSE
-   使用特定原型实例来创建特定种类的对象, 并且通过拷贝原型来创建新的对象
+   "使用特定原型实例来创建特定种类的对象, 并且通过拷贝原型来创建新的对象"
    #+END_VERSE
 2. 经典场景, 怪物系统
    #+CAPTION: 怪物实现
@@ -244,7 +244,7 @@
 * 单例模式
 1. 什么是单例
    #+BEGIN_VERSE
-   确保一个类只有一个实例, 并为其提供一个全局访问入口
+   "确保一个类只有一个实例, 并为其提供一个全局访问入口"
    #+END_VERSE
 2. 经典场景, 文件系统
    #+DESCRIPTION: 实现一个跨平台的公共文件系统接口
@@ -301,7 +301,7 @@
 * 状态模式
 1. 什么是状态模式
    #+BEGIN_VERSE
-   允许一个对象在其内部状态改变时改变自身的行为, 对象看起来好像在修改自身类
+   "允许一个对象在其内部状态改变时改变自身的行为, 对象看起来好像在修改自身类"
    #+END_VERSE
 2. 经典场景, 动作系统
    #+CAPTION: 有限状态机
@@ -1234,8 +1234,84 @@
 * 数据局部性
 1. 什么是数据局部性
    #+BEGIN_VERSE
+   "通过合理组织数据利用cpu的缓存机制来加快内存访问速度"
+   当代cpu带有多级缓存来提高内存访问速度, 通过让数据在内存连续分布来提高速度
    #+END_VERSE
 2. 经典场景
+   #+CAPTION: 游戏实体更新
+   #+BEGIN_SRC c++
+     AIComponent* ai_component = new AIComponent[MAX_ENTITIES];
+     PhysicsComponent* physics_component = new PhysicsComponent[MAX_ENTITIES];
+     RenderComponent* render_component = new RenderComponent[MAX_ENTITIES];
+
+     while (!gameover) {
+       for (auto& iter : ai_component) {
+         iter.update();
+       }
+       for (auto& iter: physics_component) {
+         iter.update();
+       }
+       for (auto& iter: render_component) {
+         iter.update();
+       }
+     }
+   #+END_SRC
+   通过将连续的组件放到数组中, 使得他们可以再内存之中连续分布, 从而提高命中率来提
+   高性能
+   #+CAPTION: 冷热分解
+   #+BEGIN_SRC c++
+     class AIComponent {
+      public:
+       // methods
+      private:
+       // 热数据, 每次更新都要用到
+       Animation* _animation;
+       double _pos;
+
+       // 冷数据, 只有少数情况会使用
+       LootDrop* _loot;
+     };
+
+     // 怪物死亡掉落
+     struct LootDrop {
+       LootType type;
+       int min_drop;
+       int max_drop;
+       double chance;
+     };
+   #+END_SRC
+   通过将冷数据存储为组件的指针, 减小组件的大小从而提高cpu一次能够缓存的数量, 由
+   于冷数据并不是经常使用所以也不会导致cpu访问指针导致频繁未命中
+3. 使用场景
+   * 确认游戏性能的瓶颈确实是由缓存未命中引起的
+4. 如何处理多态
+   为了实现局部性很可能需要牺牲一部分抽象, 继承. 他们的优势一般都是通过指针来
+   实现的, 但是指针跳转会导致未命中, 这里需要权衡
+   * 避开继承
+     - 安全且容易
+     - 速度更快
+     - 灵活性变差
+   * 为不同的类型对象使用互相独立的数组
+     - 这一系列的集合能够让对象紧密排列
+     - 你可以静态的进行调用分发
+     - 你必须时刻追踪这些集合
+     - 你必须维护每一种类型, 无法解耦
+   * 使用指针集合
+     - 灵活性高, 可扩展
+     - 对缓存不友好
+5. 游戏的实体如何定义
+   * 通过类的指针来索引组件
+     - 你可以将组件存储于相邻的数组中
+     - 对于给定的实体, 你可以很轻松的通过指针访问组件
+     - 在内存中移动很困难
+   * 假如游戏实体通过id索引其组件
+     - 更加复杂且更加缓慢
+     - 你需要组件管理器, 以便通过id查找组件
+   * 假如游戏实体本身就是id
+     - 你的游戏实体类完全消失, 完全依赖于组件模式
+     - 你无需管理其生命周期
+     - 检索一个实体的所有组件会很慢
+6. [[*组件模式][组件模式]]是实现数据局部性最常用的方法
 * 脏标记模式
 1. 什么是脏标记模式
    #+BEGIN_VERSE
