--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -14,11 +14,13 @@
 * Inbox
 * Next Action
 ** TODO [#A] 完成每日日报                                             :work:
-SCHEDULED: <2021-06-21 周一 19:00 ++1d> DEADLINE: <2021-06-21 周一 23:59 ++1d>
+SCHEDULED: <2021-06-23 周三 19:00 ++1d> DEADLINE: <2021-06-23 周三 23:59 ++1d>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-06-20 周日 09:07]
+:LAST_REPEAT: [2021-06-22 周二 21:03]
 :END:
+- State "DONE"       from "TODO"       [2021-06-22 周二 21:03]
+- State "DONE"       from "TODO"       [2021-06-21 周一 21:04]
 - State "CANCELED"   from "TODO"       [2021-06-20 周日 09:07] \\
   放假
 - State "DONE"       from "TODO"       [2021-06-19 周六 19:51]
@@ -141,15 +143,16 @@ SCHEDULED: <2021-06-26 周六 18:00 ++1w> DEADLINE: <2021-06-28 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
-** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-06-22 周二 19:00 ++1d>
+** TODO [#C] 完成leetcode一两道题                                    :learn:
+SCHEDULED: <2021-06-23 周三 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-06-21 周一 14:31]
+:LAST_REPEAT: [2021-06-22 周二 09:33]
 :END:
 
+- State "DONE"       from "TODO"       [2021-06-22 周二 09:33]
 - State "DONE"       from "TODO"       [2021-06-21 周一 14:31]
 - State "CANCELED"   from "TODO"       [2021-06-20 周日 09:07] \\
   装机
@@ -232,14 +235,15 @@ SCHEDULED: <2021-06-22 周二 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-31 Wed 23:57]
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
-** TODO [#A] 学习《游戏编程模式》                            :learn:ATTACH:
-SCHEDULED: <2021-06-22 周二 09:00 ++1d>
+** TODO [#A] 学习《游戏编程模式》                             :learn:ATTACH:
+SCHEDULED: <2021-06-23 周三 09:00 ++1d>
 :PROPERTIES:
 :STYLE:    habit
 :ATTACH:  [[attachment:游戏编程模式.org][游戏编程模式]] 
-:LAST_REPEAT: [2021-06-21 周一 15:53]
+:LAST_REPEAT: [2021-06-22 周二 11:06]
 :ID:       9f4da250-7217-4dae-b806-bb1d74142050
 :END:
+- State "DONE"       from "TODO"       [2021-06-22 周二 11:06]
 - State "DONE"       from "TODO"       [2021-06-21 周一 15:53]
 - State "CANCELED"   from "TODO"       [2021-06-20 周日 09:08] \\
   装机
